--- a/mongoDBprocesos/src/main/resources/application.properties
+++ b/mongoDBprocesos/src/main/resources/application.properties
@@ -4,5 +4,5 @@
 #spring.data.mongodb.database=Prueba
 
 #remoto
-spring.data.mongodb.uri=mongodb+srv://<name>:<password>@cluster0.sjpglz3.mongodb.net/?retryWrites=true&w=majority
-spring.data.mongodb.database=<name>
+#spring.data.mongodb.uri=mongodb+srv://<User>:<Password>@cluster0.sjpglz3.mongodb.net/?retryWrites=true&w=majority
+#spring.data.mongodb.database=<DDBB name>
