--- a/mongoDBprocesos/src/main/resources/application.properties
+++ b/mongoDBprocesos/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #local
 #spring.data.mongodb.host=localhost
 #spring.data.mongodb.port=27017
-#spring.data.mongodb.database=Prueba
+#spring.data.mongodb.database=DBName
 
 #remoto
 #spring.data.mongodb.uri=mongodb+srv://<User>:<Password>@cluster0.sjpglz3.mongodb.net/?retryWrites=true&w=majority
-#spring.data.mongodb.database=<DDBB name>
+#spring.data.mongodb.database=<DB name>
