--- a/mongoDBprocesos/src/main/resources/application.properties
+++ b/mongoDBprocesos/src/main/resources/application.properties
@@ -4,5 +4,5 @@
 #spring.data.mongodb.database=Prueba
 
 #remoto
-spring.data.mongodb.uri=mongodb+srv://prueba:prueba@cluster0.sjpglz3.mongodb.net/?retryWrites=true&w=majority
-spring.data.mongodb.database=Prueba
+#spring.data.mongodb.uri=mongodb+srv://<usuario>:<contraseña>@cluster0.sjpglz3.mongodb.net/?retryWrites=true&w=majority
+#spring.data.mongodb.database=<DBName>
