--- a/mongoDBprocesos/src/main/resources/application.properties
+++ b/mongoDBprocesos/src/main/resources/application.properties
@@ -4,5 +4,5 @@
 #spring.data.mongodb.database=Prueba
 
 #remoto
-#spring.data.mongodb.uri=mongodb+srv://<usuario>:<contraseña>@cluster0.sjpglz3.mongodb.net/?retryWrites=true&w=majority
-#spring.data.mongodb.database=<DBName>
+spring.data.mongodb.uri=mongodb+srv://mario:mario@cluster0.t4gtdev.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.database=Test
